# notifier

./: .env.template  README.md  main.py  pyproject.toml
notifier/: discord_notifier.py
