[tool.poetry]
name = "notifier"
version = "0.1.0"
description = "webhook notification to slack or discord"
authors = ["taejun <dugudugu0622@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
