[tool.poetry]
name = "dugudugu-discord-notifier"
version = "0.1.0"
description = "A simple Discord notification tool using webhooks"
authors = ["taejun <dugudugu0622@gmail.com>"]
readme = "README.md"
packages = [{include = "notifier"}]
license = "MIT"
repository = "https://github.com/taejun0622/notifier"
keywords = ["discord", "webhook", "notification", "bot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Communications",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.31.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
